--- a/.travis.yml
+++ b/.travis.yml
@@ -13,4 +13,4 @@ cache:
 deploy:
   provider: heroku
   api_key: 0732c0b2-dd50-4c92-9737-36dbef731950
-  app: AdeleWangHTTPServelet
+  app: adelewanghttpservelet
