--- a/build.gradle
+++ b/build.gradle
@@ -28,4 +28,5 @@ dependencies {
     //include servlet libraries
     providedCompile 'javax.servlet:javax.servlet-api:3.1.0'
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    runtimeOnly group: 'org.postgresql', name: 'postgresql', version: '42.2.18'
 }
